# Group22

./: README.md  package-lock.json  package.json
backend/: .env.example  .python-version  Dockerfile  pyproject.toml  requirements.txt
backend/active/: base.py
backend/active/advanced/: cache_poison.py  clickjacking.py  cors.py  css_injection.py  host_header.py  proto_pollution.py  smuggling.py  ssrf.py  websocket.py  xxe.py
backend/auth/: csrf.py  session.py
backend/config/: aggressive.yaml  config_loader.py  defaults.yaml  safe_mode.yaml  settings.json
backend/core/: config.py  context.py  database.py  datastore.py  detection.py  engine.py  evidence.py  findings.py  firebase.py  heuristics.py  pipeline.py  plugin_api.py  scheduler.py  scope.py  security.py  state.py
backend/crawl/: ajax_spider.py  api_discovery.py  form_discovery.py  param_miner.py  sitemap.py  spider.py
backend/diffing/: dom.py  responses.py  timing.py
backend/evasions/: encode.py  polyglot.py  smuggle_helpers.py
backend/evidence/: domsnap.py  har.py  redact.py  store.py
backend/passive/: cookies.py  disclosures.py  headers.py  secrets_grep.py  tech_fp.py  tls_checks.py
backend/payloads/: evasions.yaml  proto_pollution.yaml  sqli.yaml  ssrf.yaml  upload.yaml  xss.yaml  xxe.yaml
backend/reporting/: builder_html.py  builder_json.py  builder_pdf.py  normalize.py  remedies.py
backend/schemas/: evidence.schema.json  finding.schema.json  scan_config.schema.json
backend/services/: auth_service.py  firebase_admin.py  report_service.py  scan_service.py  user_service.py
backend/ws/: fuzz.py  recorder.py
(+277 files in other folders)
