[tool.poetry]
name = "scanner"
version = "0.1.0"
description = "Web Vulnerability Scanner Backend"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
fastapi = "0.110.0"
uvicorn = "0.29.0"
python-multipart = "0.0.9"
requests = "2.31.0"

# Database
SQLAlchemy = "2.0.30"

# Utilities
pydantic = "2.7.0"
python-dotenv = "1.0.1"
loguru = "0.7.2"
tenacity = "8.2.3"

# File & parsing
beautifulsoup4 = "4.12.3"
aiohttp = "3.9.5"
dnspython = "2.6.1"
pyyaml = "6.0.1"
isort = "5.13.2"

# Security & auth
authlib = "1.3.1"
pyotp = "2.9.0"
cryptography = "42.0.8"

# Websockets
websocket-client = "1.8.0"
websockets = "12.0"

# PDF generation
weasyprint = "61.2"

# Browser automation / crawling
playwright = "1.45.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
